CSS/style.css
/* ... */
.course-tutor-profile-social {
  align-items: center;
}

.course-tutor-profile-social span {
  font-size: 2rem;
}

.course-tutor-profile-description p {
  font-size: 1rem;
}

.course-tutor-profile-social a:hover span {
  transform: scale(1.21);
}

.course-tutor-profile-social a::after {
  background-color: transparent;
}

.course-tutor-profile-description a {
  color: var(--cc-color);
}

.course-tutor-profile-description a::after {
  background-color: transparent;
}

.course-tutor-profile-description a:hover {
  color: var(--cc-primary);
}

.reviews {
  flex-direction: column;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.subpage-content {
  flex-direction: column;
}

.reviews-total {
  align-items: center;
}

.grade {
  border: 1px solid var(--cc-grey-lighter);
  box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.06);
  flex: 1;
}

.progress-bars {
  flex: 3;
}

.progress {
  width: 80%;
}

.rating-num {
  font-size: 72px;
  font-weight: bold;
}

.review-ratings {
  justify-content: center;
}

.review-bar {
  align-items: center;
}

.progress-bar {
  background-color: var(--cc-distinct);
}

.carousel-control-prev-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23000000' class='bi bi-chevron-left' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3E%3C/svg%3E");
}

.carousel-control-next-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23000000' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
}

.testimonial-card-review {
  margin: 0 100px;
  width: 60%;
  display: block;
}

/*  ************************************************************************************
  ABOUT
****************************************************************************************/

.clients {
  margin: 100px auto;
  justify-content: space-between;
  align-items: center;
}

.the_brands {
  flex: 3;
  justify-content: space-around;
  align-items: center;
}

.brands-title {
  flex: 1;
}

#our-process {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right bottom,
    var(--cc-bg-distinct-lighter),
    var(--cc-bg-primary-lighter)
  );
}

#our-process-details {
  justify-content: center;
  align-items: center;
}

.intro-details p {
  font-size: 1rem;
}

.data-container {
  max-width: 1200px;
  gap: 20px;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

#data-section {
  background-color: var(--cc-primary-bg);
}

#data-section h3,
#data-section h5 {
  color: var(--cc-white-sugar);
}

.data-tab {
  border-right: 1px solid var(--cc-grey-light);
  justify-content: center;
  align-items: center;
}

.data-info img {
  display: block;
  margin: 0 auto 15px;
  max-width: 75px;
  max-height: 75px;
}

.data-info h3 {
  font-size: 40px;
}

button.accordion-button {
  text-transform: capitalize;
}

/*  ************************************************************************************
  CONTACT
****************************************************************************************/

.card-deck .card {
  flex: 1;
}

.card {
  background-color: var(--cc-grey-lighter);
}

p.card-text {
  font-size: 1rem;
}

.card-body img {
  margin: 0 auto;
}

#form-message-success {
  display: none;
}

#contactForm input,
#contactForm textarea {
  background-color: var(--cc-grey-lighter);
}

#contactForm input.btn-primary {
  background-color: var(--cc-primary-bg);
  border-color: var(--cc-primary-bg);
}

#contactForm input.btn-primary:hover,
#pricing-section button.btn-primary:hover,
#contactForm input.btn-primary:active,
#pricing-section .button.btn-primary:active {
  background-color: var(--cc-bg-dark);
  border-color: var(--cc-dark);
}

/*  ************************************************************************************
  Pricing
****************************************************************************************/
#pricing-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right,
    var(--cc-white-sugar) 200px,
    var(--cc-bg-primary-lighter) 900px,
    var(--cc-white-sugar)
  );
}

.intro--pricing {
  flex: 5;
}

.billing-duration {
  flex: 1;
  justify-content: flex-end;
  align-items: flex-start;
  align-self: start;
  background-color: var(--cc-bg-primary-lighter);
  border-radius: 5px;
}

.billing-duration-indicators {
  background-color: var(--cc-bg-primary-lighter);
}

.btn.btn-secondary {
  background-color: var(--cc-bg-primary-lighter);
  color: var(--cc-dark);
  border-color: transparent;
  font-weight: bold;
}

.btn.btn-primary {
  background-color: var(--cc-primary-bg);
  border-color: transparent;
  font-weight: bold;
}

h1 .small,
small {
  font-size: 0.9em;
}

small.attribute {
  font-size: 0.75rem;
}

.pricing-tables .card,
.pricing-tables .card-header {
  background-color: var(--cc-white-sugar);
}

.pricing-tables .card-header {
  border-bottom: none;
}

.pricing-tables .card-body li {
  list-style-type: none;
  margin: 5px 0;
  display: flex;
  align-items: center;
}

.pricing-tables .card-body ul {
  text-align: left;
  margin-left: 15%;
}

.pricing-tables .card-body h1 {
  color: var(--cc-primary);
}

.list-group li img {
  flex: 1;
  max-width: 16px;
  max-height: 16px;
  width: 100%;
  height: 100%;
  margin-right: 10px;
}

.list-group li span {
  flex: 4;
}

.list-group span {
  text-transform: capitalize;
}

.pricing-card-title small {
  font-size: 0.9rem;
}
/* ... */

